# surrogate-rules

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: mushroom.yaml
docs/: migration_guide.md
scripts/: run_experiment.py
src/config/: loader.py  models.py
src/kpi/: metrics.py
src/optimization/: registry.py  solver.py
src/optimization/backends/: base.py  cbc_backend.py  gurobi_backend.py  scip_backend.py
src/pipeline/: runner.py
src/rules/: forest.py
src/storage/: mongo.py
src/utils/: logging.py
tests/integration/: test_pipeline.py
tests/unit/: test_loaders.py  test_optimization.py  test_rules_and_kpi.py
